The computed value of line-height:normal is incorrect https://bugs.webkit.org/show_bug.cgi?id=133744

Patch by Sylvain Galineau <galineau@adobe.com> on 2015-01-26
Reviewed by Dean Jackson.

Source/WebCore:

Use font's line spacing as computed line-height value when specified value is 'normal'.
This behavior is compatible with all other engines.

No new tests; all existing tests are updated to reflect the new computed value.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::lineHeightFromStyle): If line-height wasn't set, use the font's line spacing (same as Blink).

LayoutTests:

line-height:normal now computes to a length value.
This patch updates the tests to reflect the new computed value, as needed.

* css3/calc/line-height-expected.txt:
* editing/pasteboard/simplfiying-markup-should-not-strip-content-expected.txt:
* fast/css/font-calculated-value-expected.txt:
* fast/css/font-calculated-value.html:
* fast/css/font-shorthand-from-longhands-expected.txt:
* fast/css/font-shorthand-from-longhands.html:
* fast/css/getComputedStyle/computed-style-expected.txt:
* fast/css/getComputedStyle/computed-style-font-expected.txt:
* fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* fast/css/getComputedStyle/script-tests/computed-style-font.js:
* fast/css/line-height-text-autosizing-expected.txt:
* fast/css/line-height-text-autosizing.html:
* fast/ruby/ruby-line-height-expected.txt:
* fast/ruby/script-tests/ruby-line-height.js:
* media/track/track-cue-rendering-on-resize-expected.txt:
* media/track/track-cue-rendering-on-resize.html:
* platform/mac-mavericks/platform/mac/editing/attributed-string/anchor-element-expected.txt:
* platform/mac-mavericks/platform/mac/editing/attributed-string/basic-expected.txt:
* platform/mac-mavericks/platform/mac/editing/attributed-string/font-size-expected.txt:
* platform/mac-mavericks/platform/mac/editing/attributed-string/font-style-variant-effect-expected.txt:
* platform/mac-mavericks/platform/mac/editing/attributed-string/font-weight-expected.txt:
* platform/mac-mavericks/platform/mac/editing/attributed-string/letter-spacing-expected.txt:
* platform/mac-mavericks/platform/mac/editing/attributed-string/text-decorations-expected.txt:
* platform/mac-mavericks/platform/mac/editing/attributed-string/vertical-align-expected.txt:
* platform/mac/editing/attributed-string/anchor-element-expected.txt:
* platform/mac/editing/attributed-string/basic-expected.txt:
* platform/mac/editing/attributed-string/font-size-expected.txt:
* platform/mac/editing/attributed-string/font-style-variant-effect-expected.txt:
* platform/mac/editing/attributed-string/font-weight-expected.txt:
* platform/mac/editing/attributed-string/letter-spacing-expected.txt:
* platform/mac/editing/attributed-string/text-decorations-expected.txt:
* platform/mac/editing/attributed-string/vertical-align-expected.txt:
* svg/css/getComputedStyle-basic-expected.txt:

Canonical link: https://commits.webkit.org/158909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179168 268f45cc-cd09-0410-ab3c-d52691b4dbfc