Source/WebCore/css/CSSComputedStyleDeclaration.cpp
@@ -1512,8 +1512,8 @@ static Ref<CSSValueList> fontFamilyFromStyle(RenderStyle* style)
 static Ref<CSSPrimitiveValue> lineHeightFromStyle(RenderStyle* style)
 {
     Length length = style->lineHeight();
-    if (length.isNegative())
-        return cssValuePool().createIdentifierValue(CSSValueNormal);
+    if (length.isNegative()) // If true, line-height not set; use the font's line spacing.
+        return zoomAdjustedPixelValue(style->fontMetrics().floatLineSpacing(), style);
     if (length.isPercentNotCalculated()) {
         // This is imperfect, because it doesn't include the zoom factor and the real computation
         // for how high to be in pixels does include things like minimum font size and the zoom factor.
